--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@gambit/semaphore",
+  "private": true,
   "version": "0.1.0",
   "description": "An async semaphore implemetation",
   "main": "lib/semaphore.js",
