--- a/package.json
+++ b/package.json
@@ -46,13 +46,14 @@
     "eslint": "^6.1.0",
     "eslint-plugin-flowtype": "^4.2.0",
     "eslint-plugin-import": "^2.18.2",
-    "flow-bin": "^0.106.3",
+    "flow-bin": "^0.111.0",
     "flow-remove-types": "^2.105.2",
     "flow-typed": "^2.6.1",
     "jest": "^24.9.0",
     "rimraf": "^3.0.0",
     "rollup": "^1.19.4",
     "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-copy": "^3.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^5.1.1"
